--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/rmxaqt314/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/hG75Ez1eTyeZN.mp4" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/YongHeng-360p.mp4" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/Lijianhui-200804-720.mp4" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/dmt.mp4" target="_blank">江鬼</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/rs/Uc6y.mp4" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-10/425.mp4" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-12-23/lin-720p.mp4" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/wnrl.mp4" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/5-YiSu_MH-360p.mp4" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/1-Xuezhongmei_MH-360p.mp4" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-18/huangxiaomin-tuidang.mp4" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/1/n12517535.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8UN4RU-320x200.jpg"><p align="center">【直播】川普重要讲话：选举须公正不留污点</p></a>
-<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/1/n12517535.md#1" title="【直播】川普重要讲话：选举须公正不留污点""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8UN4RU-320x200.jpg">&nbsp;</a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/1/n12517535.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8UN4RU-320x200.jpg"><p align="center">【重播】川普讲话：选举须公正不留污点</p></a>
+<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/1/n12517535.md#1" title="【重播】川普讲话：选举须公正不留污点""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8UN4RU-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528176.md#1" title="大选日后 川普总统发表首个声明""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229449771-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528082.md#1" title="密西根监票员爆料：实查7千票 却报出5万""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229465940-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12520407.md#1" title="【重播】川普团队：内华达政府纵容非法投票""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Untitled-3-320x200.jpg">&nbsp;</a>
@@ -13,11 +13,11 @@
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/14/n12475476.md#1" title="【名家专栏】选民欺诈 谁在策划选举风暴""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1058239650-web-1200x716-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524856.md#1" title="【独家】内部文件解密美国在华“和平队”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1227754768-600x400-1-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://rmxaqt314.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>2分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12518396.md#1">【独家】中共派留学生赴美进修地理背后</a><br>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527779.md#1">美国大选现乱局 专家分析深层原因</a><br>
-:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528558.md#1">川普设热线电话 让公民举报选举舞弊和滥权</a><br>
-:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526277.md#1">美国癌症幸存者 十年后回医院成肿瘤科护士</a><br>
-:clock8: <em>37分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528590.md#1">选后买盘喷发 美股全面收复上周失土</a><br>
+:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12518396.md#1">【独家】中共派留学生赴美进修地理背后</a><br>
+:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527779.md#1">美国大选现乱局 专家分析深层原因</a><br>
+:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528558.md#1">川普设热线电话 让公民举报选举舞弊和滥权</a><br>
+:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526277.md#1">美国癌症幸存者 十年后回医院成肿瘤科护士</a><br>
+:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528590.md#1">选后买盘喷发 美股全面收复上周失土</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528412.md#1">密歇根投票观察员：民主党人正窃取选举结果</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12523460.md#1">蚂蚁集团暂缓上市 分析：马云恐难翻身</a><br>
@@ -42,13 +42,13 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,924,944 人
+!共 366,926,415 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12518740.md#1">【大选更新】川普宣布在宾州等三州获胜</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528082.md#1">密西根监票员爆料：实查7千票 却报出5万</a><br>
-<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/1/n12517535.md#1">【直播】川普重要讲话：选举须公正不留污点</a><br>
+<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/1/n12517535.md#1">【重播】川普讲话：选举须公正不留污点</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526344.md#1">川普团队对乔治亚州计票提诉讼 全美第三宗</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528162.md#1">【薇羽看世间】美大选现异常 谁在搅混水？</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526226.md#1">美媒：民主党欲窃取三个摇摆州的选举结果</a><br>
