--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/rmxaqt314/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/hG75Ez1eTyeZN.mp4" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/YongHeng-360p.mp4" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/Lijianhui-200804-720.mp4" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/dmt.mp4" target="_blank">江鬼</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/rs/Uc6y.mp4" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-10/425.mp4" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-12-23/lin-720p.mp4" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/wnrl.mp4" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/5-YiSu_MH-360p.mp4" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/1-Xuezhongmei_MH-360p.mp4" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-18/huangxiaomin-tuidang.mp4" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527098.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1284134498-320x200.jpg"><p align="center">【大选更新11.5】川普：不许任何人使选民失声</p></a>
-<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527098.md#1" title="【大选更新11.5】川普：不许任何人使选民失声""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1284134498-320x200.jpg">&nbsp;</a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527098.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1284134498-320x200.jpg"><p align="center">【大选更新11.5】川普：不许任何人使选民噤声</p></a>
+<a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12527098.md#1" title="【大选更新11.5】川普：不许任何人使选民噤声""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1284134498-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/1/n12517535.md#1" title="【重播】川普讲话：选举须公正不留污点""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8UN4RU-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528176.md#1" title="大选日后 川普总统发表首个声明""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229449771-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528082.md#1" title="密西根监票员爆料：实查7千票 却报出5万""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229465940-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/14/n12475476.md#1" title="【名家专栏】选民欺诈 谁在策划选举风暴""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1058239650-web-1200x716-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524856.md#1" title="【独家】内部文件解密美国在华“和平队”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1227754768-600x400-1-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://rmxaqt314.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528554.md#1">【远见快评】大选舞弊 民主党在豪赌？</a><br>
-:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528563.md#1">纽约州取消1月份高中毕业会考</a><br>
-:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528826.md#1">21世纪X光揭示古埃及墨汁秘方</a><br>
-:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528476.md#1">【新闻看点】美大选诡异陷僵局 料另一场大战</a><br>
-:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528813.md#1">干细胞怎样选择自己的“职业”？</a><br>
-:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528799.md#1">全新方案用纳米技术解决脚臭</a><br>
+:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528685.md#1">川普支持者云集关键州 抗议计票不公</a><br>
+:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528554.md#1">【远见快评】大选舞弊 民主党在豪赌？</a><br>
+:clock8: <em>37分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528563.md#1">纽约州取消1月份高中毕业会考</a><br>
+:clock8: <em>37分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528826.md#1">21世纪X光揭示古埃及墨汁秘方</a><br>
+:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528476.md#1">【新闻看点】美大选诡异陷僵局 料另一场大战</a><br>
+:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528813.md#1">干细胞怎样选择自己的“职业”？</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525523.md#1">李克强河南考察时 半空突传凄厉喊冤声</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525453.md#1">【中共百种酷刑】性摧残（上）</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,930,421 人
+!共 366,930,599 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
