--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -38,6 +38,6 @@
 <tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12520485.md#1" target="_blank">足底筋膜炎4招改善！症状、治疗和复健全图解</a><br></h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12520485.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/Plantar-fasciitis-02web-upd-tj-health11-150x120.jpg" align ="left"></a>早晨起床时，脚一踩地，脚底突然传来一阵如针刺般的痛楚——小心！很可能是足底筋膜炎找上门了。足底筋膜炎是常见的足部毛病，它有哪些症状？应该如何治疗、复健？本篇用图解带你一次看懂。足底筋膜是位于脚底的扇形结缔组织，如果足底筋膜承受太多压力，就会开始产生一些小撕裂伤，经年累月下就容易发炎、肿胀，造成足底筋膜炎。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 2:30 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521320.md#1" target="_blank">英航退休波音747客机 明年春天对外开放</a><br></h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521320.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1228952453-150x120.jpg" align ="left"></a>英国航空公司（British Airways）表示，该公司一架退休的波音747客机将于2021年春天对外开放，作为社会大众的教育和娱乐设施。对于航空迷而言，这个消息不啻为一项福音。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 1:22 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12519192.md#1" target="_blank">好搭又不怕退流行 7技巧穿出优雅时尚</a><br></h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12519192.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/victoria_beckham-700x420-150x120.jpg" align ="left"></a>引领时尚的时装设计师会告诉你，只要平时在网拍Ebay上追踪设计师款包包，或拍卖自有奢侈品的钱来买新品就好了。这些建议并不差，但还是很花钱。其实想要打扮得时尚优雅并不需要提光存款，充分利用“购物技巧”与“现有衣服穿搭”才是真正提升穿搭风格的要点喔！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 9:03 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/31/n12515130.md#1" target="_blank">这些蔬果有苦味别吃 可致中毒！误食3步处理</a><br></h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/31/n12515130.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/shutterstock_1173575104-150x120.jpg" align ="left"></a>除了苦瓜这类具天然苦味的蔬菜可正常食用之外，当一些蔬果，例如丝瓜、青木瓜等食物出现不应该有的苦味，小心别吃进天然毒素葫芦素。葫芦素味道苦涩，中毒症状有肠胃痉挛、呕吐、腹泻、脱水、虚弱无力。葫芦素存在许多常见的食材中，如果不小心误食有异样苦味的蔬果，要赶快吐掉，留意身体情况、多喝水，有严重不适应尽早就医。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 7:00 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529032.md#1" target="_blank">【田律师专栏】从法律上分析2020年美国大选危机和解决方案</a><br></h3>由于新冠病毒的影响，2020年美国大选到了今天的2020年11月5日仍无结果，这让全美各界深感忧虑。以往的惯例是在选举日第二天早上，落选的候选人公开承认败选，从而使大选结果尽早明确。而今年的选举无法很快就见分晓。那些习惯了打砸抢的人群也不失时机地上街斗殴和闹事，最终可能会导致军队出动干预和镇压；而投票的半夜飞来的幽灵之.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月06日 11:47 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2008_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rmxaqt314/djy/blob/master/gb/news2008.md#1<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2008.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/rmxaqt314/djy/blob/master/gb/news2008.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2008.htm">https://www.epochtimes.com/gb/news2008.htm</a>    （国内需<a href="https://github.com/rmxaqt314/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
