--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -32,7 +32,7 @@
 
 隆隆的炮声从江边传来，一夜未停，吓得江南人民心惊胆战。湖湾村的村民一夜未眠，因为无处可逃，所以只能在家等死.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月04日 3:00 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524165.md#1" target="_blank">如何自我教育并成为高效自学者</a><br></h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12524165.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/Fotolia_120002024_Subscription_L-150x120.jpg" align ="left"></a>自我教育意味着养成一系列促进自我教育的习惯。再细化一点就是，这些习惯会组成一个系统，从而促使您关注自己感兴趣的相关主题。正如前面提到的，这种方法作为一种有效的选择直到最近才出现。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月04日 1:23 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12523568.md#1" target="_blank">被预言选中的人：川普和曹操</a><br></h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12523568.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229385761-150x120.jpg" align ="left"></a>现在美国总统大选正在如火如荼的进行中，很多人都对总统结果都进行了预测。在历史上，每当这种的重大事件要发生的时候，往往有对应的预言。 有预言就包含了“Trump” 我们今天就来聊聊这些预言。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月04日 12:48 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12523568.md#1" target="_blank">被预言选中的人：川普和曹操</a><br></h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12523568.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229385761-150x120.jpg" align ="left"></a>现在美国总统大选正在如火如荼的进行中，很多人都对总统结果都进行了预测。在历史上，每当这种重大事件要发生的时候，往往有对应的预言。 有预言就包含了“Trump” 我们今天就来聊聊这些预言。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月04日 12:48 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12520267.md#1" target="_blank">李世民为命定天子 四人提前道破天机</a><br></h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12520267.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/03/54eac4886570ec12ded89d1e00f098b5-150x120.jpg" align ="left"></a>李世民，是唐高祖李渊的次子，也是唐朝第二个皇帝，是为唐太宗。他秉承天命，缔造了为中外史学家称道的“贞观之治”，可谓“日月丽天”。在这个时期，唐朝在文化、经济、农业、手工业、商业、交通等各个方面都远远地超越了以往的所有时代，而且多元纷呈、绚丽夺目，社会呈现出一派祥和、礼让、安定、富足的太平气息，史称“东至于海，南至于岭.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月04日 2:19 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/11/1/10/n3138163.md#1" target="_blank">我们牵手 我们放手</a><br></h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/11/1/10/n3138163.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2011/01/462758_medium-150x120.jpg" align ="left"></a>牵过的手，爱过的人，牵绊依旧？温暖依旧？曾经，大手抓握着小手，小手依顺着大手。曾经，有手在你的手心打勾勾。曾经，有手在你的手心画颗心。那人，那手，那情缘，模糊了？消失了？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月04日 12:12 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/23/n12497346.md#1" target="_blank">生气就发飙？用情绪绑架他人这举动弱爆了</a><br></h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/23/n12497346.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/03/1608072131022483-150x120.jpg" align ="left"></a>即使压抑情绪，用工作来逃避，情绪是不会消失的。如果没有适当地表达出来，情绪不但不会消失，甚至会以扭曲的形式出现。例如，有的人会干脆自我麻痹，活得像是没有情绪一样，或者刻意放大情绪，习惯情绪用事。也有人会因为一直压抑情绪，导致身体出现疾病。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 9:41 PM			</td></tr>
