--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12526403.md#1" title="分析：中共为何把官员私藏禁书列为首罪""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/20201030054323632-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12526005.md#1" title="确保选举可信 川普在两州提告 要一州重计票""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1282737617-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://rmxaqt314.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529272.md#1">纽约“计算每张选票”支持拜登游行变暴力示威 57人被捕</a><br>
-:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529125.md#1">纽约市议会周一表决法拉盛滨水区改建计划</a><br>
-:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529248.md#1">河北两厅官落马 其中定州市委书记主动投案</a><br>
-:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529023.md#1">川普这次大选何以赢得少数族裔支持</a><br>
-:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529168.md#1">对比美国大选 美退役准将赞台湾开票透明</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528877.md#1">就内华达选民舞弊 共和党向司法部递刑事案</a><br>
+:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529214.md#1">票站观察员：投票时核查身份太松  钻空子易</a><br>
+:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529171.md#1">纽约共和党选民成长 惜无在地力量</a><br>
+:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/5/n12528429.md#1">美大选注册选民人数现疑云 事实核查</a><br>
+:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12528563.md#1">纽约州取消1月份高中毕业会考</a><br>
+:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529272.md#1">纽约“计算每张选票”支持拜登游行变暴力示威 57人被捕</a><br>
+:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/6/n12529125.md#1">纽约市议会周一表决法拉盛滨水区改建计划</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525523.md#1">李克强河南考察时 半空突传凄厉喊冤声</a><br>
 <a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/4/n12525522.md#1">蚂蚁中港上市突喊停 业界分析背后恐不简单</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,938,583 人
+!共 366,940,267 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
