--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -25,7 +25,10 @@
 在香港问题上，中共当然最忌惮美国，如今美国.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月13日 6:59 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/12/n12544607.md#1" target="_blank">【名家专栏】美大选 应重新手工计票</a><br></h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/12/n12544607.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/cc1dff91b2e8ffba-150x120.jpg" align ="left"></a>在研究过程中，我越来越清楚地意识到，民主党人确信战胜像川普这样大受欢迎的总统的唯一途径是，伪造民意调查并非法侵入选举软件。川普最后一刻举行的集会吸引了成千上万的民众，相比之下，只有几十人开着车出来向候选人拜登鸣喇叭。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月13日 5:52 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/12/n12544549.md#1" target="_blank">【名家专栏】终止被科技巨头主宰的两种方式</a><br></h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/12/n12544549.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/jack-dorsey-700x420-150x120.jpg" align ="left"></a>前些日子，科技巨头公司的老板们出现在参议院委员会面前时，再次展示了他们是一股多么恶劣的势力。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月13日 4:51 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/12/n12545187.md#1" target="_blank">谢田：川普闲庭信步 信心来自高科技？</a><br></h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/12/n12545187.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/IMG_2431-150x120.jpg" align ="left"></a>美国2020年大选跌宕起伏，好戏连连。从诡异的数字到舞弊证据的浮现，总统川普出人意外的安静，选举的那个周末从周六到周日，在外人认为的严重大选危机中，川普居然悠闲地连日打高尔夫球！川普究竟有什么底气，什么样的信心，什么样的杀手锏，让他闲庭信步、悠哉悠哉，没有一丝的忧虑？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月13日 4:30 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/14/n12549087.md#1" target="_blank">高雷：选择</a><br></h3>山川依旧在
+只是人心败
+天堂与地狱
+表态定未来......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月14日 4:57 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/14/n12548870.md#1" target="_blank">数据派：中国——世界无神论者生产基地</a><br></h3>在普通话中文世界里，无神论是个很普遍的理论。对中国的信仰普查结果表明，中国有约半数人口是坚定的无神论者，完全排斥神的存在。很多中国人以为世界上的人们大都是同样的无神论者，和自己一样相信神只是迷信。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月14日 4:25 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/13/n12547914.md#1" target="_blank">金慧：我们正处于人类历史大洪水期的前夜</a><br></h3>很多西方人，特别是精英知识分子，过惯了好日子，不知道什么是乱世。
 
