--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -14,7 +14,7 @@
 1.鲍威尔：我们即将证......<br><img align="bottom" src="https://raw.githubusercontent.com/mytgei3586/www/master/t/ntdtv/time.gif">11月20日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562803.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/11/5590f39c8c6110899cb41245906cf473-320x200.jpg" align ="left"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562803.md#1" target="_blank">暴雪侵袭 牡丹江机场临时关闭 多机场取消航班</a><br></h3>连续暴雪，今天（11月20日），牡丹江海浪国际机场继续临时关闭，航......<br><img align="bottom" src="https://raw.githubusercontent.com/mytgei3586/www/master/t/ntdtv/time.gif">11月20日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562870.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/11/1a1fb1128b77b0d-320x200.jpg" align ="left"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562870.md#1" target="_blank">【大陆新闻解毒】时事小品：多猫腻跨国搞政变</a><br></h3>这集“混球时报”折射出中共如何隐藏在幕后操纵深度渗透美国大选，剧情......<br><img align="bottom" src="https://raw.githubusercontent.com/mytgei3586/www/master/t/ntdtv/time.gif">11月20日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562646.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562646.md#1" target="_blank">天津新增病例急封小区、医院 涉及学校全停课</a><br></h3>天津再爆中共病毒（武汉肺炎）本土感染病例。目前，天津一社区被列为高......<br><img align="bottom" src="https://raw.githubusercontent.com/mytgei3586/www/master/t/ntdtv/time.gif">11月20日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562646.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562646.md#1" target="_blank">天津本土病例急增 滨海新区全员检测</a><br></h3>天津再爆中共病毒（武汉肺炎）本土感染病例。目前，天津一社区被列为高......<br><img align="bottom" src="https://raw.githubusercontent.com/mytgei3586/www/master/t/ntdtv/time.gif">11月20日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562673.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562673.md#1" target="_blank">河南信阳送葬人发生车祸 至少9死4伤</a><br></h3>11月20日清晨，河南省信阳市发生一起车祸，一货车与送葬人群相撞......<br><img align="bottom" src="https://raw.githubusercontent.com/mytgei3586/www/master/t/ntdtv/time.gif">11月20日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12562304.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2008/11/811080406501459-320x200.jpg" align ="left"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12562304.md#1" target="_blank">债券违约增加 大陆多家中介机构被调查</a><br></h3>大陆交易商协会11月19日发文对部分券商涉嫌欺诈发行、操纵市场等行......<br><img align="bottom" src="https://raw.githubusercontent.com/mytgei3586/www/master/t/ntdtv/time.gif">11月20日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562329.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2019/12/1912260923562188-320x200.jpg" align ="left"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562329.md#1" target="_blank">阮民安筹拍新歌《手足》 坚持重现抗争画面</a><br></h3>香港歌手阮民安（Tommy）与邝俊宇继去年合作创作歌曲《煲底之约......<br><img align="bottom" src="https://raw.githubusercontent.com/mytgei3586/www/master/t/ntdtv/time.gif">11月20日</td></tr>
