--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12562150.md#1" title="【重磅】川普律师公布八大选举舞弊指控""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8VH7VF-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561412.md#1" title="【一线采访】青岛滨海学院封校 学生：要疯了""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229036964-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://mytgei3586.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564010.md#1">乔治亚重计票不比对签名 川普团队拒承认结果</a><br>
-:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562646.md#1">天津本土病例急增 滨海新区全员检测</a><br>
-:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563699.md#1">【新闻大家谈】舞弊八大证据和服务器疑云</a><br>
-:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/15/n12550992.md#1">大卖场卤味熟食能买吗？店家不说的真相</a><br>
-:clock8: <em>24分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563853.md#1">用Ibotta应用在沃尔玛买食品 可获感恩节免费餐</a><br>
-:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563993.md#1">特殊感应器赋予机械手多维触感</a><br>
+:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564063.md#1">鲍威尔：川普的实际选票应超8000万</a><br>
+:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564085.md#1">天体爆炸发出无法解释的大量能量</a><br>
+:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564010.md#1">乔治亚重计票不比对签名 川普团队拒承认结果</a><br>
+:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562646.md#1">天津本土病例急增 滨海新区全员检测</a><br>
+:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563699.md#1">【新闻大家谈】舞弊八大证据和服务器疑云</a><br>
+:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/15/n12550992.md#1">大卖场卤味熟食能买吗？店家不说的真相</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12558748.md#1">习近平前脚刚走 南京前首富杨宗义被查</a><br>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560222.md#1">中共喉舌发长文捧习 分析：个人崇拜再升级</a><br>
@@ -38,7 +38,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 367,897,462 人
+!共 367,898,393 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
