--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -22,7 +22,7 @@
 <h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556081.md#1" target="_blank">凡士林不只保湿 有5大妙用 挑选看1点</a><br></h3>
 <h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556324.md#1" target="_blank">坐姿前弯：简单一个动作 拉伸全身后侧肌肉</a><br></h3>
 <h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556425.md#1" target="_blank">喉咙痛到吞口水想哭？按2个耳穴速止痛</a><br></h3>
-<h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556573.md#1" target="_blank">中医1茶饮根治喉咙痛！扁桃腺炎、咽喉炎都能救</a><br></h3>
+<h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556573.md#1" target="_blank">中医1招根治喉咙痛！扁桃腺炎、咽喉炎都能救</a><br></h3>
 <h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12559225.md#1" target="_blank">一次拔牙20颗 医师无医德？牙医的真心话</a><br></h3>
 <h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560254.md#1" target="_blank">【慧聊养生】最早疫苗源于中国</a><br></h3>
 <h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561618.md#1" target="_blank">治牙周病他糖尿病竟好转 医：都是慢性发炎惹祸</a><br></h3>
