--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12562150.md#1" title="【重磅】川普律师公布八大选举舞弊指控""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8VH7VF-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561412.md#1" title="【一线采访】青岛滨海学院封校 学生：要疯了""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229036964-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://mytgei3586.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564148.md#1">美加大对太平洋岛国援助 制衡中共影响力</a><br>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564235.md#1">【直播】白宫发言人新闻发布会</a><br>
-:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564211.md#1">乔州选举监督员：审计软件存在严重漏洞</a><br>
-:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563301.md#1">吉林警察半夜铁棍砸门 绑架法轮功学员孙亚珍</a><br>
-:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563968.md#1">美CDC主任：学校是防疫最安全地方之一</a><br>
-:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564139.md#1">华晨集团宣布破产重整 证监会立案调查</a><br>
+:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563897.md#1">【珍言真语】谈舞弊遭禁播 桑普直指华盛顿沼泽</a><br>
+:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564148.md#1">美加大对太平洋岛国援助 制衡中共影响力</a><br>
+:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564235.md#1">【直播】白宫发言人新闻发布会</a><br>
+:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564211.md#1">乔州选举监督员：审计软件存在严重漏洞</a><br>
+:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563301.md#1">吉林警察半夜铁棍砸门 绑架法轮功学员孙亚珍</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563968.md#1">美CDC主任：学校是防疫最安全地方之一</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560222.md#1">中共喉舌发长文捧习 分析：个人崇拜再升级</a><br>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561275.md#1">赵立坚粗口骂五眼联盟 再现战狼本色</a><br>
@@ -37,7 +37,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 367,902,485 人
+!共 367,902,573 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
