--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,17 +13,18 @@
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562470.md#1" title="共和党赢26摇摆区 拿下民主党7个众议席""><img width="73" src="https://i.epochtimes.com/assets/uploads/2018/06/610f3273b196930084f3ed7f98e4c629-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12562260.md#1" title="鲍威尔：我们即将证明川普获压倒性胜利""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Sidney-Powell-EpochTimes_510A8621-700x420-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://mytgei3586.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564005.md#1">【直播】川普就降低处方药价格发表讲话</a><br>
-:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564360.md#1">美参议员斯科特病毒检测呈阳性 在家隔离</a><br>
-:clock8: <em>46分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564334.md#1">易富贤：中国诸多政策基于错误人口数据</a><br>
-:clock8: <em>46分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564142.md#1">川普团队：舞弊证据将呈堂 川普是最终赢家</a><br>
-:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564344.md#1">宾州Dominion临阵脱逃公听会 州参院质问</a><br>
-:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/16/n12552112.md#1">【独家】在海外为中共牵线的关键人物</a><br>
+:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564448.md#1">新泽西共和党主席呼吁州长墨菲谴责华府暴力</a><br>
+:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564392.md#1">鲍威尔证实服务器在德被没收 CIA涉案成疑点</a><br>
+:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564403.md#1">乔州路边惊现遭弃投票机 官方：在调查源头</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564185.md#1">Dominion陷舞弊指控 急撇清和古巴委国关系</a><br>
+:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564005.md#1">【直播】川普就降低处方药价格发表讲话</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564360.md#1">美参议员斯科特病毒检测呈阳性 在家隔离</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560222.md#1">中共喉舌发长文捧习 分析：个人崇拜再升级</a><br>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561275.md#1">赵立坚粗口骂五眼联盟 再现战狼本色</a><br>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561355.md#1">拜登阵营丑闻：贿赂内华达原住民 花钱买票</a><br>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560109.md#1">陕西女大学生自杀身亡 遗书指遭系领导猥亵</a><br>
+<a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560058.md#1">【翻墙必看】乔治亚州重新计票的骗局</a><br>
 <br><p align="center"><a href="https://github.com/mytgei3586/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12559549.md#1">【一线采访】天津疫情社区传播 一医院被封</a><br>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556030.md#1">【独家】中共培训东南亚国家警官的背后</a><br>
@@ -36,7 +37,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 367,903,905 人
+!共 367,903,971 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
